@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.171 2005/09/21 03:14:20 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.172 2005/09/23 02:01:25 agaffney Exp $
 
 *GLI-gtkfe-0.2 (13 Aug 2005)
+
+  22 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  move 'Recommended layout' button up to top
+  add 'Clear partitions' button
 
   20 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   add 'network is already setup and running' checkbox on ClientConfig screen
